# balatro-jkr-editor

./: .gitignore  config.py  pyproject.toml
migration/scripts/: update_dat_files.py  update_jokers_from_jkr_file.py
src/: __init__.py
src/bases/: models.py
src/constants/: cards.py  data.py  dirs.py
src/models/: game.py  joker.py  shops.py  tag.py
src/utils/: __init__.py  lua_parser.py
