[tool.poetry]
name = "balatro-jkr-editor"
version = "1.0.0"
description = "Balatro JKR editor"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
six = "^1.17.0"
pyyaml = "^6.0.2"
cryptography = "^44.0.0"
pydantic = "^2.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
